--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,7 +40,7 @@ before_build:
   - cmd: cd output
   - cmd: if "%configuration%"=="Release" conan install ../.. --file=.conanfile.txt
   - cmd: if "%configuration%"=="Debug" conan install ../.. --file=.conanfile.txt -s compiler="Visual Studio" -s compiler.version=14 -s arch=x86 -s build_type=Debug -s compiler.runtime=MDd
-  - cmd: set PATH=%PATH%:C:\Program Files\CMake\bin;
+  - cmd: set PATH=%PATH%:C:\Program Files\CMake\bin:C:\Program Files (x86)\cmake\bin
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
   - cmd: set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   - cmd: set PATH=C:\MinGW\bin;%PATH%
