--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ install:
     #
     # cmake
     #
-    - cinst cmake --version 3.6.1
+    - cinst cmake
 
     #
     # conan
@@ -40,7 +40,13 @@ before_build:
   - cmd: cd output
   - cmd: if "%configuration%"=="Release" conan install ../.. --file=.conanfile.txt
   - cmd: if "%configuration%"=="Debug" conan install ../.. --file=.conanfile.txt -s compiler="Visual Studio" -s compiler.version=14 -s arch=x86 -s build_type=Debug -s compiler.runtime=MDd
-  - cmd: set PATH=%PATH%:C:\Program Files\CMake\bin:C:\Program Files (x86)\cmake\bin
+    # FIMXE: try find out where cmake is
+  - cmd: dir "C:\Program Files\CMake\bin"
+  - cmd: dir "C:\Program Files"
+  - cmd: dir "C:\Program Files\CMake"
+  - cmd: dir "C:\Program Files (x86)"
+  - cmd: dir "C:\Program Files (x86)\CMake"
+  - cmd: set PATH=%PATH%:C:\Program Files\CMake\bin;C:\Program Files (x86)\cmake\bin
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
   - cmd: set PATH=%PATH:C:\Program Files\Git\usr\bin;=%
   - cmd: set PATH=C:\MinGW\bin;%PATH%
