travis: try to reactivate osx support

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,15 @@ git:
   depth: 5
 
 matrix:
-  # allow_failures:
-  #   - os: osx
+  allow_failures:
+    - os: osx
   include:
-    # - os: osx
-    #   compiler: clang
-    #   env: BUILD_TYPE=Release
+    - os: osx
+      compiler: clang
+      env: BUILD_TYPE=Release
+    - os: osx
+      compiler: clang
+      env: BUILD_TYPE=Debug
     - os: linux
       compiler: gcc
       env: BUILD_TYPE=Release DEPLOY="1" COMPILER="gcc"
@@ -50,19 +53,17 @@ addons:
       - ubuntu-toolchain-r-test
 
 install:
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then source ./build/scripts/travis.install.linux.sh; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then source ./build/scripts/travis.install.osx.sh; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PATH=$PATH:~/conan; fi
+  - export PROJECT="`pwd`"
+  - export BUILD_DIR=${PROJECT}/build/scripts
+  - source ${BUILD_DIR}/travis.install.${TRAVIS_OS_NAME}.sh
 
 script:
-  - export PROJECT="`pwd`"
-  - export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64"
-  - export TARGET="package run_all_tests"
-  - ${PROJECT}/build/scripts/build.linux.sh ${BUILD_TYPE} ${COMPILER} ${THIRD_PARTY} ${TARGET}
-  - sudo dpkg -i stage/pkg/dogen_*_amd64-applications.deb
-  - cd /tmp
-  - /usr/bin/dogen.knitter --version
-  - cd ${PROJECT}
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64"
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; export TARGET="package run_all_tests"
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64"
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; export TARGET="package run_all_tests"
+  - ${BUILD_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${COMPILER} ${THIRD_PARTY} ${TARGET}
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; ${BUILD_DIR}/test_package.sh
 
 notifications:
   email:
