travis: use xcode8 as the osx image
- put third party in path so we can use a more recent cmake

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@
 sudo: required
 dist: trusty
 language: cpp
+osx_image: xcode8
 
 git:
   depth: 5
@@ -62,6 +63,7 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export TARGET="package run_all_tests"; fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64"; fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export TARGET="package run_all_tests"; fi
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PATH=${THIRD_PARTY}/bin:${PATH}; fi
   - ${BUILD_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${COMPILER} ${THIRD_PARTY} ${TARGET}
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${BUILD_DIR}/test_package.sh; fi
 
