travis: add libxml2 to the loader path for osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,8 @@ script:
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64"; fi
   - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export TARGET="package run_all_tests"; fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64"; fi
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export DYLD_LIBRARY_PATH="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64/lib"; fi
+
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export TARGET="package run_all_tests"; fi
   - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PATH=${THIRD_PARTY}/bin:${PATH}; fi
   - ${BUILD_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${COMPILER} ${THIRD_PARTY} ${TARGET}
