--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,6 @@
 sudo: required
 dist: trusty
 language: cpp
-osx_image: xcode8
 
 git:
   depth: 5
@@ -31,9 +30,11 @@ matrix:
   include:
     - os: osx
       compiler: clang
+      osx_image: xcode8
       env: BUILD_TYPE=Release COMPILER="clang"
     - os: osx
       compiler: clang
+      osx_image: xcode8
       env: BUILD_TYPE=Debug COMPILER="clang"
     - os: linux
       compiler: gcc
@@ -59,15 +60,16 @@ install:
   - source ${BUILD_DIR}/travis.install.${TRAVIS_OS_NAME}.sh
 
 script:
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64"; fi
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then export TARGET="package run_all_tests"; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64"; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export DYLD_LIBRARY_PATH="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64/lib"; fi
-
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export TARGET="package"; fi
-  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then export PATH=${THIRD_PARTY}/bin:${PATH}; fi
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then
+        export TARGET="package run_all_tests";
+        export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_gcc_5.3_linux_amd64";
+    fi
+  - if [[ $TRAVIS_OS_NAME == 'osx' ]]; then
+        export THIRD_PARTY="/tmp/dogen_deps/dogen_deps_clang_7_3_0_osx_amd64";
+        export TARGET="package run_all_tests";
+    fi
   - ${BUILD_DIR}/build.${TRAVIS_OS_NAME}.sh ${BUILD_TYPE} ${COMPILER} ${THIRD_PARTY} ${TARGET}
-  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${BUILD_DIR}/test_package.sh; fi
+  - if [[ $TRAVIS_OS_NAME == 'linux' ]]; then ${BUILD_DIR}/test_package.linux.sh; fi
 
 notifications:
   email:
