--- a/.travis.yml
+++ b/.travis.yml
@@ -54,9 +54,9 @@ addons:
     sources:
       - ubuntu-toolchain-r-test
 
+
 install:
-  - export PROJECT="`pwd`"
-  - export BUILD_DIR=${PROJECT}/build/scripts
+  - export BUILD_DIR=build/scripts
   - source ${BUILD_DIR}/travis.install.${TRAVIS_OS_NAME}.sh
 
 script:
