appveyor: try brackets in env variable

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -25,7 +25,7 @@ install:
   - cinst cmake --version 3.4.3
   - cmd: cmake --version
   - cmd: set BUILD_DIR=build/scripts
-  - ps: .\$env:BUILD_DIR\appveyor.install.windows.ps1
+  - ps: .\${env:BUILD_DIR}\appveyor.install.windows.ps1
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
