--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,16 +16,18 @@ configuration:
 platform:
   - x64
 
-clone_depth: 5
+clone_depth: 1
 
 install:
+  - cmd: set BUILD_DIR=build/scripts
+  - ps: write-host $env:BUILD_DIR
+  - ps: .\${env:BUILD_DIR}\appveyor.install.windows.ps1
+
   #
   # cmake
   #
   - cinst cmake --version 3.4.3
   - cmd: cmake --version
-  - cmd: set BUILD_DIR=build/scripts
-  - ps: .\${env:BUILD_DIR}\appveyor.install.windows.ps1
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
