--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -20,7 +20,7 @@ clone_depth: 1
 
 install:
   - cmd: set BUILD_DIR=build/scripts
-  - ps: ./$env:BUILD_DIR/appveyor.install.windows.ps1
+  - ps: write-host ./$env:BUILD_DIR/appveyor.install.windows.ps1
 
   #
   # cmake
