--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,26 +19,21 @@ platform:
 clone_depth: 1
 
 install:
-  - cmd: set BUILD_DIR=build/scripts
-  - ps: . $env:BUILD_DIR/appveyor.install.windows.ps1
+  - ps: $BUILD_DIR=build/scripts
+  - ps: ./${BUILD_DIR}/appveyor.install.windows.ps1
 
   #
   # cmake
   #
   - cinst cmake --version 3.4.3
-  - cmd: cmake --version
-
-before_build:
-  # Workaround for CMake not wanting sh.exe on PATH for MinGW
-  - cmd: set PATH=%PATH%:C:\Program Files\Git\usr\bin;=%
-  - cmd: set PATH=C:\MinGW\bin;%PATH%
+  - ps: cmake --version
 
 build_script:
-  - cmd: set THIRD_PARTY="C:/TEMP/dogen_deps_vc14_windows_amd64";
-  - cmd: set TARGET="package run_windows_green_tests";
-  - cmd: set BUILD_TYPE="%configuration%"
+  - ps: $THIRD_PARTY="C:/TEMP/dogen_deps_vc14_windows_amd64";
+  - ps: $TARGET="package run_windows_green_tests";
+  - ps: $BUILD_TYPE="%configuration%"
   - ps: ls
-  - ps: . $env:BUILD_DIR/build.windows.ps1 -build_type $env:BUILD_TYPE -compiler $env:COMPILER -third_party $env:THIRD_PARTY -target $env:TARGET
+  - ps: ./${BUILD_DIR}/build.windows.ps1 -build_type $BUILD_TYPE -compiler $COMPILER -third_party $THIRD_PARTY -target $TARGET
 
 notifications:
   - provider: Webhook
