--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,8 +19,7 @@ platform:
 clone_depth: 1
 
 install:
-  - ps: $BUILD_DIR="build\scripts";
-  - ps: .\$BUILD_DIR\appveyor.install.windows.ps1
+  - ps: .\build\scripts\appveyor.install.windows.ps1
 
   #
   # cmake
@@ -33,7 +32,7 @@ build_script:
   - ps: $TARGET="package run_windows_green_tests";
   - ps: $BUILD_TYPE="%configuration%"
   - ps: ls
-  - ps: .\$BUILD_DIR\build.windows.ps1 -build_type $BUILD_TYPE -compiler $COMPILER -third_party $THIRD_PARTY -target $TARGET
+  - ps: .\build\scripts\build.windows.ps1 -build_type $BUILD_TYPE -compiler $COMPILER -third_party $THIRD_PARTY -target $TARGET
 
 notifications:
   - provider: Webhook
