--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,6 +19,7 @@ platform:
 clone_depth: 1
 
 install:
+  - ps: $project_dir="$pwd";
   - ps: .\build\scripts\appveyor.install.windows.ps1
 
   #
@@ -31,6 +32,8 @@ build_script:
   - ps: $THIRD_PARTY="$env:temp\dogen_deps\dogen_deps_vc14_windows_amd64";
   - ps: $TARGET="package run_windows_green_tests";
   - ps: $BUILD_TYPE="%configuration%"
+  - ps: ls
+  - ps: cd $project_dir
   - ps: ls
   - ps: .\build\scripts\build.windows.ps1 -build_type $BUILD_TYPE -compiler $COMPILER -third_party $THIRD_PARTY -target $TARGET
 
