--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,7 +29,7 @@ install:
   - ps: cmake --version
 
 build_script:
-  - ps: $build_type="%configuration%"
+  - ps: $build_type="$env:configuration"
   - ps: $third_party="$env:temp\dogen_deps\dogen_deps_vc14_windows_amd64";
   - ps: $target="package run_windows_green_tests";
   - ps: cd $project_dir
