--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,7 +6,6 @@ branches:
 
 environment:
   matrix:
-    # - generator: "MinGW Makefiles"
     - compiler: msvc
 
 configuration:
@@ -23,9 +22,13 @@ install:
   - ps: .\build\scripts\appveyor.install.windows.ps1
 
 build_script:
-  - ps: $build_type="$env:configuration"
+  - ps: $build_type="$env:configuration";
   - ps: $third_party="$env:temp\dogen_deps\dogen_deps_vc14_windows_amd64";
-  - ps: $target="run_all_tests";
+  - ps: if ($build_type -eq "Release") {
+            $target = "run_windows_green_tests";
+        } elseif ($build_type -eq "Debug") {
+            $target = "knit";
+        }
   - ps: cd $project_dir
   - ps: .\build\scripts\build.windows.ps1 -build_type $build_type -compiler $env:compiler -third_party $third_party -target $target
 
