cmake: improve latex support

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -17,6 +17,9 @@
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
 #
-add_custom_target(latex_docs)
+if (WITH_LATEX)
+  add_custom_target(latex_docs)
+endif()
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/presentations)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/manual)
