bintray: make descriptor a template

--- a/.travis.yml
+++ b/.travis.yml
@@ -98,7 +98,7 @@ deploy:
 
 deploy:
   provider: bintray
-  file: "build/scripts/bintray.json"
+  file: "build/output/${COMPILER}/${BUILD_TYPE}/stage/pkg/bintray.json"
   user: mcraveiro
   key:
     secure: IrFRrzzMnnFzj2s2hYctnvMjTf7HRe5uQVPcioAjbuNrxXX5XYmRH6ce8osxoRhcpQYS9ppCmrt8VbRBB57piWS3yKfM6WftDrmNQil7XwqowKAKm/VuX6K5psjJHRCYoNUAovwvfLmaLIWvVd+I+NkU48EXvflClXx13Qp8GtU=
