--- a/.travis.yml
+++ b/.travis.yml
@@ -104,6 +104,6 @@ deploy:
   key:
     secure: IrFRrzzMnnFzj2s2hYctnvMjTf7HRe5uQVPcioAjbuNrxXX5XYmRH6ce8osxoRhcpQYS9ppCmrt8VbRBB57piWS3yKfM6WftDrmNQil7XwqowKAKm/VuX6K5psjJHRCYoNUAovwvfLmaLIWvVd+I+NkU48EXvflClXx13Qp8GtU=
   on:
-    tags: true
+    # tags: true
     branch: master
     condition: "${DEPLOY} = 1"
